--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "jquery-migrate": "^3.4.1",
     "slick-carousel": "^1.8.1"
   }
 }
